--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <form class="form">
+        <label>
+          <input type="text" name="query" class="input" autocomplete="off" placeholder="Search images..." required/>
+        </label>
+        <button type="submit" class = "button-search">Search</button>
+      </form>    
+      <div class="loader">Loading...</div>
+      <div class="gallery"></div>
+      <button type="submit" class="js-load-more" style="display: none;">Load more</button>
     </main>
-
-    <load src="./partials/footer.html" />
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
